--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "build:prod": "GENERATE_SOURCEMAP=false NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+    "build": "set GENERATE_SOURCEMAP=false && react-scripts build",
+    "build:prod": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
