--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
-    "react-beautiful-dnd": "^13.1.1",
+
     "react-date-range": "^1.4.0",
     "react-icons": "^4.11.0",
     "redux-persist": "^6.0.0",
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set GENERATE_SOURCEMAP=false && react-scripts build",
-    "build:prod": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
+    "build": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
+    "build:prod": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=8192 && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
