--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: stayspot-app
     env: node
     plan: free
-    buildCommand: chmod +x build-light.sh && ./build-light.sh
+    buildCommand: cd server && npm install && cd ../client && npm install && GENERATE_SOURCEMAP=false NODE_OPTIONS=--max-old-space-size=2048 CI=false DISABLE_ESLINT_PLUGIN=true npm run build:light
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
@@ -17,4 +17,4 @@ services:
       - key: GENERATE_SOURCEMAP
         value: false
       - key: NODE_OPTIONS
-        value: --max-old-space-size=12288 
+        value: --max-old-space-size=2048 
