Optimize build configuration for Render's 512MB memory limit
- Reduced memory allocation to 128MB for build process
- Added custom build scripts for memory optimization
- Updated render.yaml with memory-efficient settings
- Added CRACO configuration for webpack optimization
- Created custom build script for low-memory environments

--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=2048 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && react-scripts build",
+    "build": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=1024 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && set SKIP_PREFLIGHT_CHECK=true && react-scripts build",
     "build:prod": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=8192 --optimize-for-size && react-scripts build",
     "build:minimal": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=4096 && set CI=false && react-scripts build",
     "build:light": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=2048 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && react-scripts build",
     "build:ultra": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=1024 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && set SKIP_PREFLIGHT_CHECK=true && react-scripts build",
+    "build:render": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=128 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && set SKIP_PREFLIGHT_CHECK=true && set INLINE_RUNTIME_CHUNK=false && set FAST_REFRESH=false && set DISABLE_OPTIMIZATION=false && react-scripts build",
+    "build:render-custom": "node build-render.js",
+    "build:render-craco": "set GENERATE_SOURCEMAP=false && set NODE_OPTIONS=--max-old-space-size=128 && set CI=false && set DISABLE_ESLINT_PLUGIN=true && set SKIP_PREFLIGHT_CHECK=true && npx craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
