Add pre-built React app for Render deployment
- Built React app locally with 4GB memory allocation
- Updated render.yaml to skip build process
- Server already configured to serve pre-built files
- Build files committed to repository for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: stayspot-app
     env: node
     plan: free
-    buildCommand: cd server && npm install && cd ../client && npm install && npm run build:render
+    buildCommand: cd server && npm install
     startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
