FORCE FRESH DEPLOYMENT: Change service name to stayspot-app-fresh
- Render is using cached dashboard config, not render.yaml
- Changed service name to force fresh deployment
- Build command should be: echo 'SERVER ONLY BUILD' && cd server && npm install
- But Render is still using old cached config
- Need to manually update Render dashboard settings

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: stayspot-app
+    name: stayspot-app-fresh
     env: node
     plan: free
     # FORCE SERVER ONLY BUILD - NO CLIENT BUILD
