FIX API URL: Rebuild client with correct production API URL
- Set REACT_APP_API_URL=https://stayspot-app.onrender.com
- Rebuilt client with production API endpoint
- Cleaned up render config files (single render.yaml)
- Fixed localhost:3001 connection issue
- App should now connect to deployed backend

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: stayspot-app-fresh
+    name: stayspot-app
     env: node
     plan: free
-    # FORCE SERVER ONLY BUILD - NO CLIENT BUILD
+    # SERVER ONLY BUILD - NO CLIENT BUILD NEEDED
     buildCommand: echo "SERVER ONLY BUILD - NO CLIENT BUILD NEEDED"; cd server; npm install
     startCommand: cd server && npm start
     envVars:
