FIX API URL: Update to correct Render URL
- Changed REACT_APP_API_URL to https://stayspot-tnd0.onrender.com
- Rebuilt client with correct production endpoint
- Matches your Render environment variables
- Should now connect to the right backend

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: REACT_APP_API_URL
-        value: https://stayspot-app.onrender.com
+        value: https://stayspot-tnd0.onrender.com
       - key: PORT
         value: 10000
       - key: MONGO_URL
